Prevent horizontal scrolling

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -43,6 +43,7 @@ html {
 body {
   margin: 0;
   width: 100%;
+  overflow-x: hidden;
   background-color: $bg-page;
 }
 
